# Summer-work

./: CMakeLists.txt  README.md  main.cpp  test.cpp
BinaryTree/: myAVLTree.h  myBinaryHeap.h  myBinaryTree.h
Console/: myConsole.h
DynamicArray/: myDynamicArray.cpp  myDynamicArray.h
LinkedList/: myLinkedList.h  myQueue.h  myStack.h
Map/: myMap.h
Sequence/: myArraySequence.h  myLinkedSequence.h  mySequence.h
SmartPointer/: mySmartPointer.h
Sorting/: BatcerSort.h  BatcherSort.h  BinInsertSort.h  BinaryTreeSort.h  BubbleSort.cpp  BubbleSort.h  ChoiceSort.h  CountingSort.h  HeapSort.h  InsertSort.h  MergeSort.h  QuickSort.h  SelectionSort.h  SelectionSortMod.h  ShakerSort.h  SheikerSort.cpp  SheikerSort.h  ShellSort.h  allSorts.h  i24wfejs  isLessDefault.h  sortingMenu.cpp  sortingMenu.h
Sorting/menu/: sortingMenu.h
Tests/: TestFuncs.cpp  TestFuncs.h
Timer/: myTimer.cpp  myTimer.h
